2008-08-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 429411 – add style properties to set minimum progressbar 
	width/height

	* gtk/gtkprogressbar.c: Add style properties for minimum size.
	Patch by Carlos Garnacho and Christian Dywan

2008-08-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 526575 – Missing return type in gtk_ui_manager_get_toplevels
	documentation

	* gtk/gtkuimanager.c (gtk_ui_manager_get_toplevels): Improve
	the docs.

2008-08-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 523950 – GtkTreeModelFilter's visible function may get an empty
	row

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_set_visible_func):
	Explain and show how iterators pointing to empty rows should be
	handled in the visible function. Patch by Björn Lindqvist

2008-08-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 539733 – No way to control treeview separator height

	* gtk/gtktreeview.c: Respect the wide-separators and
	separator-height style properties when drawing separators.
	Patch by Christian Dywan

2008-08-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 65818 – rename gtk_window_set_default() and add getter for it

	* gtk/gtk.symbols:
	* gtk/gtkwindow.[hc]: Rename gtk_window_get_default to
	gtk_window_get_default_widget. Patch by Christian Dywan

2008-08-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 344383 – use po/LINGUAS

	* po/LINGUAS: New file, to make translators happy.
	* configure.in: Use po/LINGUAS
	* po/Makefile.in.in: Add po/LINGUAS to DISTFILES
	Patch by Claude Paroz

2008-08-02  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkapplaunchcontext.c: Improve the docs

2008-08-01  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 545931 – small documentation typos

	* gtk/gtkcomboboxentry.c: Fix some typos in the documentation.

2008-08-01  Hans Breuer  <hans@breuer.org>

	* gdk/makefile.msc : build gdkwindowimpl

	* gtk/gtkwidget.c : fix c99ism - declaration needs to be at the
	start of a block

	* tests/makefile.msc : update
